--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,6 +34,18 @@
     <li><a href="/map">Edu.Points</a></li>
     
     </ul>
+
+    <ul class="nav-list2">
+    
+    <li><a href="/signup">Register</a></li>
+    <li><a href="/login">Login</a></li>
+    <li><a href="/logout">Logout</a></li>
+    
+    
+    </ul>
+
+
+
    
 </div>
 </nav>
