--- a/views/map.hbs
+++ b/views/map.hbs
@@ -6,7 +6,7 @@
 
 <div>
   
-  <div id='map'style='width: 85vw; height: 60vh; margin:50px auto ;'></div>
+  <div id='map'style='width: 100vw; height: 100vh;  margin:auto ;'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoidHViYS1rYXNhcCIsImEiOiJjanh1ZTI0YXcwMDM4M2dtbnZ6eXJuOGs2In0.L_TRnX4VuwoBAP4cSCFCVQ';
