--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,25 +28,32 @@
   <div class="container-fluid">
     <ul class="nav-list">
     
-    <li><a href="/">Home</a></li>
-    <li><a href="/map">Parks</a></li>
-    <li><a href="/map">cycleRoutes</a></li>
-    <li><a href="/map">Edu.Points</a></li>
+    <li class="li"><a href="/">Home</a></li>
+    <li class="li"><a href="/map">Parks</a></li>
+    <li class="li"><a href="/map">cycleRoutes</a></li>
+    <li class="li"><a href="/map">Edu.Points</a></li>
     
     </ul>
 
-    <ul class="nav-list2">
     
-    <li><a href="/signup">Register</a></li>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/logout">Logout</a></li>
-    
-    
-    </ul>
-
 
 
    
+</div>
+
+<div class="container-fluid2">
+<ul class="nav-list2">
+    
+    <li class="right"><a href="/signup">SignUp</a></li>
+    <li class="right"><a href="/login">Login</a></li>
+    <li class="right"><a href="/">Logout</a></li>
+
+    
+    
+    
+    </ul>
+
+
 </div>
 </nav>
 
