--- a/views/map.hbs
+++ b/views/map.hbs
@@ -41,15 +41,13 @@ center: [13.375739, 52.509352],
   <button class="btn btn-danger" onclick="$('.edupoints').toggleClass('active');">
     &#9776;
   </button>
+  
   <form action="/map" method="POST">
-    <label for="name">name:</label>
+    <label for="name">Name:</label>
     <input type="text" name="name">
-    <label for="imageUrl">image-url:</label>
-    <input type="text" name="imageUrl">
-    <label for="latitude">latitude:</label>
-    <input type="number" step="0.0001" name="latitude">
-    <label for="longitude">longitude:</label>
-    <input type="number" step="0.0001" name="longitude">
+    <label for="adress">Adress:</label>
+    <input type="text" name="adress">
+   
      <div class="redbutton">
     <button  class="btn btn-success" type="submit" method="get"> Add Edu.Point</button>
     </div>
