--- a/views/map.hbs
+++ b/views/map.hbs
@@ -1,9 +1,4 @@
 
-
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.0/mapbox-gl.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.0/mapbox-gl.css' rel='stylesheet' />
-
 <div>
   
   <div id='map'style='width: 100vw; height: 100vh;  margin:auto ;'></div>
@@ -17,6 +12,31 @@ center: [13.375739, 52.509352],
   zoom: 14.5,
   pitch: 47.5
 });
+
+
+
+var geolocate = new mapboxgl.GeolocateControl({
+        positionOptions: {
+          enableHighAccuracy: true
+        },
+        trackUserLocation: true
+      });
+
+      map.addControl(geolocate);
+
+
+
+
+map.addControl(new MapboxDirections({
+accessToken: mapboxgl.accessToken
+}), 'top-left');
+
+map.addControl(new MapboxGeocoder({
+accessToken: mapboxgl.accessToken,
+mapboxgl: mapboxgl
+}));
+
+
 </script>
 
 
@@ -37,11 +57,11 @@ center: [13.375739, 52.509352],
 
 
 
-<div class="edupoints">
+{{!-- <div class="edupoints">
   <button class="btn btn-danger" onclick="$('.edupoints').toggleClass('active');">
     &#9776;
   </button>
-  
+
   <form action="/map" method="POST">
     <label for="name">Name:</label>
     <input type="text" name="name">
@@ -53,7 +73,7 @@ center: [13.375739, 52.509352],
     </div>
   </form>
    
-</div> 
+</div>  --}}
 
 
  
