--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,3 +1,64 @@
 <div id="container">
     <h2>Welcome to the private area</h2>
 </div>
+
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.0/mapbox-gl.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.0/mapbox-gl.css' rel='stylesheet' />
+
+<div>
+  
+  <div id='map'style='width: 100vw; height: 100vh;  margin:auto ;'></div>
+
+<script>
+mapboxgl.accessToken = 'pk.eyJ1IjoidHViYS1rYXNhcCIsImEiOiJjanh1ZTI0YXcwMDM4M2dtbnZ6eXJuOGs2In0.L_TRnX4VuwoBAP4cSCFCVQ';
+var map = new mapboxgl.Map ({
+container: 'map',
+style: "mapbox://styles/tuba-kasap/cjxulodz50esc1cle1zrefz12",
+center: [13.375739, 52.509352],
+  zoom: 14.5,
+  pitch: 47.5
+});
+</script>
+
+
+{{!-- </div>
+<p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Link with href
+  </a>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-target
+  </button>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+  </div>
+</div> --}}
+
+
+
+<div class="edupoints">
+  <button class="btn btn-danger" onclick="$('.edupoints').toggleClass('active');">
+    &#9776;
+  </button>
+  
+  <form action="/map" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" name="name">
+    <label for="adress">Adress:</label>
+    <input type="text" name="adress">
+    
+   
+     <div class="redbutton">
+    <button  class="btn btn-success" type="submit" method="get"> Add Edu.Point</button>
+    </div>
+  </form>
+   
+</div> 
+
+
+ 
+
+
