--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -49,7 +49,7 @@ center: [13.375739, 52.509352],
     <input type="text" name="name">
     <label for="adress">Adress:</label>
     <input type="text" name="adress">
-    
+    <div id='geocoder' class='geocoder'></div>
    
      <div class="redbutton">
     <button  class="btn btn-success" type="submit" method="get"> Add Edu.Point</button>
@@ -57,6 +57,9 @@ center: [13.375739, 52.509352],
   </form>
    
 </div> 
+
+<script>
+</script>
 
 
  
