--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -10,16 +10,7 @@
   
   <div id='map'style='width: 100vw; height: 100vh;  margin:auto ;'></div>
 
-<script>
-mapboxgl.accessToken = 'pk.eyJ1IjoidHViYS1rYXNhcCIsImEiOiJjanh1ZTI0YXcwMDM4M2dtbnZ6eXJuOGs2In0.L_TRnX4VuwoBAP4cSCFCVQ';
-var map = new mapboxgl.Map ({
-container: 'map',
-style: "mapbox://styles/tuba-kasap/cjxulodz50esc1cle1zrefz12",
-center: [13.375739, 52.509352],
-  zoom: 14.5,
-  pitch: 47.5
-});
-</script>
+
 
 
 {{!-- </div>
@@ -44,12 +35,15 @@ center: [13.375739, 52.509352],
     &#9776;
   </button>
   
-  <form action="/map" method="POST">
+  <form action="/map" method="POST" id="add-place" >
+    <input type="text" id="geoholder" name="locations"
     <label for="name">Name:</label>
     <input type="text" name="name">
     <label for="adress">Adress:</label>
     <input type="text" name="adress">
     <div id='geocoder' class='geocoder'></div>
+
+    <div id="geocoder" class="geocoder"></div>
    
      <div class="redbutton">
     <button  class="btn btn-success" type="submit" method="get"> Add Edu.Point</button>
@@ -59,6 +53,39 @@ center: [13.375739, 52.509352],
 </div> 
 
 <script>
+mapboxgl.accessToken = 'pk.eyJ1IjoidHViYS1rYXNhcCIsImEiOiJjanh1ZTI0YXcwMDM4M2dtbnZ6eXJuOGs2In0.L_TRnX4VuwoBAP4cSCFCVQ';
+var map = new mapboxgl.Map ({
+container: 'map',
+style: "mapbox://styles/tuba-kasap/cjxulodz50esc1cle1zrefz12",
+center: [13.375739, 52.509352],
+  zoom: 14.5,
+  pitch: 47.5
+});
+
+axios.get("http://localhost:7100/api/locations").then(response=>{
+   response.data.forEach(place=>{
+       let popup = new mapboxgl.Popup({ offset: 0, className: 'my-class' })
+        .setHTML(`<div class="popup">${place.name}</div>`)
+        .setMaxWidth("none")
+
+
+
+       var marker = new mapboxgl.Marker()
+  .setLngLat(place.location.coordinates)
+  .setPopup(popup)
+  .addTo(map);
+   })
+})
+
+var geocoder = new MapboxGeocoder({
+    accessToken: mapboxgl.accessToken,
+    mapboxgl: mapboxgl
+  });
+
+  document.getElementById('geocoder').appendChild(geocoder.onAdd(map));
+  document.querySelector("#add-place").addEventListener("submit", () => {
+    document.querySelector("#geoholder").value = document.querySelector(".mapboxgl-ctrl-geocoder--input").value
+  })
 </script>
 
 
