--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,12 +58,12 @@ a {
   color: white; }
 
 .edupoints {
-  display: block;
+  display: ruby-base-container;
   position: absolute;
-  width: 40px;
+  width: 100px;
   height: 40px;
   z-index: 5;
-  top: 100px;
+  top: 250px;
   left: 25px;
   overflow: hidden;
   transition: 400ms;
@@ -73,7 +73,7 @@ a {
   width: 200px;
   height: 500px;
   background-color: white;
-  padding: 10px; }
+  padding: 30px; }
 
 .access {
   display: flex;
@@ -98,5 +98,56 @@ a {
 
 #geoholder {
   display: none; }
+
+.private {
+  background-color: #39b8eb;
+  padding: none;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-decoration-color: aliceblue;
+  color: #c82929;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 100vw; }
+
+.home {
+  display: block;
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  z-index: 5;
+  top: 100px;
+  overflow: hidden;
+  transition: 400ms;
+  border-radius: 10px;
+  text-decoration-color: aliceblue;
+  top: 50vh;
+  /* left: 50vw;
+  transform: translateX(-50%)
+  transform: translateY(-50%)  */
+  justify-content: center;
+  align-items: center; }
+
+.home.active {
+  width: 200px;
+  height: 500px;
+  background-color: white;
+  display: flex;
+  justify-content: center; }
+
+.title {
+  text-decoration-color: aliceblue; }
+
+#center2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ee3939;
+  font-size: 25px; }
+
+/* .searchline{
+  justify-content: left;
+  align-items: left;
+} */
 
 /*# sourceMappingURL=style.css.map */
