--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,5 +1,5 @@
 <div id="container">
-    <h2>Welcome to the private area</h2>
+    <h2 class="private">Welcome to the private area</h2>
 </div>
 
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
@@ -39,11 +39,24 @@
     <input type="text" id="geoholder" name="locations"
     <label for="name">Name:</label>
     <input type="text" name="name">
-    <label for="adress">Adress:</label>
-    <input type="text" name="adress">
-    <div id='geocoder' class='geocoder'></div>
-
+ 
     <div id="geocoder" class="geocoder"></div>
+
+    <label for="event">Event:</label>
+    <input type="text" name="event">
+
+    <label for="information">General Information:</label>
+    <input type="text" name="information">
+
+    <label for="date">Date:</label>
+    <input type="date" name="date">
+
+    <label for="time">Time:</label>
+    <input type="time" name="time">
+
+
+  
+
    
      <div class="redbutton">
     <button  class="btn btn-success" type="submit" method="get"> Add Edu.Point</button>
@@ -62,7 +75,7 @@ center: [13.375739, 52.509352],
   pitch: 47.5
 });
 
-axios.get("http://localhost:7100/api/locations").then(response=>{
+axios.get("http://localhost:7200/api/locations").then(response=>{
    response.data.forEach(place=>{
        let popup = new mapboxgl.Popup({ offset: 0, className: 'my-class' })
         .setHTML(`<div class="popup">${place.name}</div>`)
@@ -81,6 +94,20 @@ var geocoder = new MapboxGeocoder({
     accessToken: mapboxgl.accessToken,
     mapboxgl: mapboxgl
   });
+
+  var geolocate = new mapboxgl.GeolocateControl({
+        positionOptions: {
+          enableHighAccuracy: true
+        },
+        trackUserLocation: true
+      });
+
+      map.addControl(geolocate);
+
+map.addControl(new MapboxDirections({
+accessToken: mapboxgl.accessToken
+}), 'top-left');
+
 
   document.getElementById('geocoder').appendChild(geocoder.onAdd(map));
   document.querySelector("#add-place").addEventListener("submit", () => {
