--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -70,7 +70,7 @@
     
    
     {{#if user}}
-    <li class="right"><a href="/">Logout</a></li>
+    <li class="right"><a href="/logout">Logout</a></li>
     {{!-- <li class="li"><a href="/secret">Add.Point</a></li> --}}
     {{else}}
     <li class="right"><a href="/signup">SignUp</a></li>
