--- a/views/map.hbs
+++ b/views/map.hbs
@@ -1,36 +1,38 @@
 
 <div>
   
-  <div id='map'style='width: 100vw; height: 100vh;  margin:auto ;'></div>
+  <div id='map'style='width: 100vw; height: calc(100vh - 60px);  margin:auto ;'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoidHViYS1rYXNhcCIsImEiOiJjanh1ZTI0YXcwMDM4M2dtbnZ6eXJuOGs2In0.L_TRnX4VuwoBAP4cSCFCVQ';
 var map = new mapboxgl.Map ({
 container: 'map',
-style: "mapbox://styles/tuba-kasap/cjxulodz50esc1cle1zrefz12",
+style: "mapbox://styles/tuba-kasap/cjxyyrvwr052p1crzfxpiu7iw/draft",
 center: [13.375739, 52.509352],
   zoom: 14.5,
   pitch: 47.5
 });
 
 var geolocate = new mapboxgl.GeolocateControl({
-        positionOptions: {
-          enableHighAccuracy: true
-        },
-        trackUserLocation: true
-      });
+  positionOptions: {
+    enableHighAccuracy: true
+  },
+  trackUserLocation: true
+});
 
-      map.addControl(geolocate);
+map.addControl(geolocate, 'bottom-right');
+map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
+
+map.addControl(new MapboxGeocoder({
+accessToken: mapboxgl.accessToken,
+mapboxgl: mapboxgl
+}), 'top-left'); 
 
 map.addControl(new MapboxDirections({
 accessToken: mapboxgl.accessToken
 }), 'top-left');
 
 {{!-- <div class="searchline"> --}}
- map.addControl(new MapboxGeocoder({
-accessToken: mapboxgl.accessToken,
-mapboxgl: mapboxgl
-})); 
 
 
 
@@ -71,8 +73,3 @@ mapboxgl: mapboxgl
   </form>
    
 </div>  --}}
-
-
- 
-
-
