--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,65 +1,45 @@
-<div id="container">
-    <h2 class="private">Welcome to the private area</h2>
-</div>
-
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.0/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.0/mapbox-gl.css' rel='stylesheet' />
 
 <div>
   
-  <div id='map'style='width: 100vw; height: 100vh;  margin:auto ;'></div>
-
-
-
-
-{{!-- </div>
-<p>
-  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-    Link with href
-  </a>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-    Button with data-target
-  </button>
-</p>
-<div class="collapse" id="collapseExample">
-  <div class="card card-body">
-    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-  </div>
-</div> --}}
+  <div id='map'style='width: 100vw; height: calc(100vh - 60px);  margin:auto ;'></div>
 
 
 
 <div class="edupoints">
-  <button class="btn btn-danger" onclick="$('.edupoints').toggleClass('active');">
-    &#9776;
-  </button>
+    <button class="btn btn-primary" onclick="$('.edupoints').toggleClass('active');">
+      &#9776;
+    </button>
+
+  <h4>Add Points:</h4>
   
   <form action="/map" method="POST" id="add-place" >
-    <input type="text" id="geoholder" name="locations"
+    <input type="text" id="geoholder" name="locations">
     <label for="name">Name:</label>
-    <input type="text" name="name">
+    <input type="text" name="name" placeholder="Name:">
  
     <div id="geocoder" class="geocoder"></div>
 
     <label for="event">Event:</label>
-    <input type="text" name="event">
+    <input type="text" name="event" placeholder="Event:">
 
     <label for="information">General Information:</label>
-    <input type="text" name="information">
+    <input type="text" name="information" placeholder="General Information:">
 
     <label for="date">Date:</label>
-    <input type="date" name="date">
+    <input type="date" name="date" placeholder="Date:" class="datein">
 
     <label for="time">Time:</label>
-    <input type="time" name="time">
+    <input type="time" name="time" placeholder="Time:" class="datein">
 
 
   
 
    
      <div class="redbutton">
-    <button  class="btn btn-success" type="submit" method="get"> Add Edu.Point</button>
+    <button  class="btn btn-danger redbutton" type="submit" method="get">Submit</button>
     </div>
   </form>
    
@@ -69,7 +49,7 @@
 mapboxgl.accessToken = 'pk.eyJ1IjoidHViYS1rYXNhcCIsImEiOiJjanh1ZTI0YXcwMDM4M2dtbnZ6eXJuOGs2In0.L_TRnX4VuwoBAP4cSCFCVQ';
 var map = new mapboxgl.Map ({
 container: 'map',
-style: "mapbox://styles/tuba-kasap/cjxulodz50esc1cle1zrefz12",
+style: "mapbox://styles/tuba-kasap/cjxyyrvwr052p1crzfxpiu7iw/draft",
 center: [13.375739, 52.509352],
   zoom: 14.5,
   pitch: 47.5
@@ -90,23 +70,28 @@ axios.get("http://localhost:7200/api/locations").then(response=>{
    })
 })
 
-var geocoder = new MapboxGeocoder({
-    accessToken: mapboxgl.accessToken,
-    mapboxgl: mapboxgl
-  });
+var geolocate = new mapboxgl.GeolocateControl({
+  positionOptions: {
+    enableHighAccuracy: true
+  },
+  trackUserLocation: true
+});
 
-  var geolocate = new mapboxgl.GeolocateControl({
-        positionOptions: {
-          enableHighAccuracy: true
-        },
-        trackUserLocation: true
-      });
+map.addControl(geolocate, 'bottom-right');
+map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
 
-      map.addControl(geolocate);
+map.addControl(new MapboxGeocoder({
+accessToken: mapboxgl.accessToken,
+mapboxgl: mapboxgl
+}), 'top-left'); 
 
 map.addControl(new MapboxDirections({
 accessToken: mapboxgl.accessToken
 }), 'top-left');
+
+document.getElementById('add-place').insertBefore(document.getElementsByClassName('mapboxgl-ctrl-geocoder')[0], document.getElementById('geocoder'));
+
+{{!-- <div class="searchline"> --}}
 
 
   document.getElementById('geocoder').appendChild(geocoder.onAdd(map));
@@ -114,8 +99,3 @@ accessToken: mapboxgl.accessToken
     document.querySelector("#geoholder").value = document.querySelector(".mapboxgl-ctrl-geocoder--input").value
   })
 </script>
-
-
- 
-
-
