--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -8,6 +8,9 @@ $grey: #313330;
 body {
   padding: auto;
   font: 14px "Open Sans", Helvetica, Arial, sans-serif;
+  background-image: url(../images/bg.png);
+  background-size: cover;
+
 }
 
 a {
