--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -52,8 +52,8 @@
     <ul class="nav-list">
     
     <li class="li"><a href="/">Home</a></li>
-    <li class="li"><a href="/map">Parks</a></li>
-    <li class="li"><a href="/map">cycleRoutes</a></li>
+    {{!-- <li class="li"><a href="/map">Parks</a></li>
+    <li class="li"><a href="/map">cycleRoutes</a></li> --}}
     <li class="li"><a href="/map">Edu.Points</a></li>
     
     
