--- a/views/map.hbs
+++ b/views/map.hbs
@@ -13,6 +13,21 @@ center: [13.375739, 52.509352],
   pitch: 47.5
 });
 
+axios.get("http://localhost:7200/api/locations").then(response=>{
+   response.data.forEach(place=>{
+       let popup = new mapboxgl.Popup({ offset: 0, className: 'my-class' })
+        .setHTML(`<div class="popup">${place.name}</div>`)
+        .setMaxWidth("none")
+
+
+
+       var marker = new mapboxgl.Marker()
+  .setLngLat(place.location.coordinates)
+  .setPopup(popup)
+  .addTo(map);
+   })
+})
+
 var geolocate = new mapboxgl.GeolocateControl({
   positionOptions: {
     enableHighAccuracy: true
